# ese-congress-2025-demo

./: README.md  partitions.t-display-s3.csv  sdkconfig.defaults.t-display-s3
components/rusty/: CMakeLists.txt  Cargo.toml
components/rusty/include/: rusty.h
components/rusty/src/: lib.rs  qr.rs  rt.rs
components/wifi_scanner/: CMakeLists.txt  Kconfig.projbuild
components/wifi_scanner/include/: wifi_scanner.h
components/wifi_scanner/src/: wifi_scanner.c
main/: CMakeLists.txt  main.cpp
rusty/: Cargo.toml
rusty/src/: lib.rs
