[package]
name = "rusty"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
libc_alloc = { version = "1.0.7", default-features = false }
qrcode = { git = "https://github.com/kennytm/qrcode-rust.git", rev = "c7780e8549ac4fb3da81fdf7d7f010a27db78c0f", default-features = false }
